Bug 392751 - Allow out of bounds rects in getImageData; r=bz